# conversational-agent

./: .dockerignore  .gitignore  README.md  SAMPLE_CONVOS.md  noxfile.py  pyproject.toml
deployment/: Dockerfile
deployment/docker-compose/: application.yml  build.yml
src/conversational_agent/: __init__.py  utils.py
src/conversational_agent/api/: agent.py  endpoints.py  utils.py
src/conversational_agent/config/: agent_service.py  api.py
src/conversational_agent/config/dependencies/: database.py  kafka.py  openai.py  opensearch.py  postgres.py  rag.py
src/conversational_agent/data_models/: __init__.py  agent.py  agent_service.py  api_models.py  db_models.py  ml_models.py
src/conversational_agent/scripts/: build_rag_index.py  create_knowledge_base.py
src/conversational_agent/services/: agent_service.py  llm_service.py  rag_service.py
src/frontend/: frontend.py
storage/: knowledge_base.jsonl
storage/indexes/sparse/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
tests/: test_agent_service.py
