[project]
name = "conversational_agent"
dynamic = ["version"]
requires-python = ">= 3.12, < 4.0"

dependencies = [
  "pydantic ~= 2.9",
  "fastapi ~= 0.115.8",
  "uvicorn ~= 0.34.0",
  "pydantic_settings ~= 2.8",
  "authlib ~= 1.3",
  "aiohttp ~= 3.11",
  "aiosqlite ~= 0.21",
  "sqlalchemy ~= 2.0",
  "alembic ~= 1.15",
  "openai ~= 1.109",
  "sqlmodel ~= 0.0.25",
  "psycopg[binary] ~= 3.2",
]

[dependency-groups]
# We leave the majority of these dependencies unpinned
# since we don't expect to care about the specific types 
# of most of the tooling here. The primary exceptions
# are those where we rely on the API (e.g. pytest).
test = [
  "pytest ~= 8.3",
  "pytest-timeout ~= 2.3",
  "pytest-asyncio ~= 0.24",
  "pytest-cov ~= 6.0",
  "testcontainers ~= 4.4",
]
typecheck = ["pyright"]
depcheck = ["deptry"]
format = ["ruff"]
lint = ["ruff"]
dev = [
  "jupyter",
  "jupyter-server",
  "copier",
  "nox",
  { include-group = "test" },
  { include-group = "typecheck" },
  { include-group = "depcheck" },
  { include-group = "format" },
  { include-group = "lint" },
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = [".git", "build"]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["pdm-backend", "packaging"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]

[tool.deptry.per_rule_ignores]
# Database adapter we use via SQLAlchemy to connect to the PSQL DB. Not an explicit import dependency but a dependency nonetheless.
DEP002 = ["psycopg"]

[tool.ruff]
extend-exclude = [".venv*", "_version.py"]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "A", "B", "SIM", "ASYNC"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
